Fixing weird vertical spacing on cast images.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -312,9 +312,7 @@ footer p {
 }
 
 #avatar-icon {
-  margin-top: 20px;
   width: 200px;
-  padding-top: 6px;
   cursor: pointer;
 }
 
